www/mpra.css
td {
  padding: 0 5px 0 5px;
  border-bottom: 1px solid rgb(227, 227, 227);
}

th {
  border-bottom: 1px solid #000;
  padding: 0 5px 0 5px;
  background-color: rgb(245, 245, 245);
}

tr:hover {
  background-color: rgb(245, 245, 245);
}

#download_panel {
  padding-right: 0px;
}

#file_format {
  background-color: rgb(245, 245, 245);
  border-bottom-color: rgb(227, 227, 227);
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  border-image-outset: 0;
  border-image-repeat: stretch stretch;
  border-image-slice: 100%;
  border-image-source: none;
  border-image-width: 1;
  border-color: rgb(227, 227, 227);
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 1px 0px inset;
  box-sizing: border-box;
  color: rgb(51, 51, 51);
  padding: 5px;
}

#footer {
  margin-top: 30px;
  border-top-style: solid;
  border-top-width: 1px;
  border-top-color: rgb(227, 227, 227);
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: #F5F5F5;
  text-align: center;
  color: #1A1A1E;
  /* body text color for footer */
}

/* footer links */
#footer a {
  color: #0071A0;
  /* darker as links in the main body to compensate the darker background  */
}

#footer a:hover,
#footer a:focus {
  color: #0D3F80;
  text-decoration: underline;
}

#canvas {
  height: 100%;
}

/* set color for normal text globally */
body {
  color: #28282E;
}

a {
  color: #1D71D7;
  /* link color */
  /*text-decoration: underline;  in case if the color contrast is not enough */
}

a:hover,
a:focus {
  color: #154EA0;
  /* darker blue */
  text-decoration: underline;
  /* and also underline if link in focus */
}

/* navigation bar colors(background and font) */
.navbar-default {
  background-color: #F5F5F5;
  /* same as footer*/
}

/* navigation bar colors */
.navbar-default .navbar-nav>li>a {
  color: #6b6b6b;
  /* slightly darker than before contrast 5:1*/
}

/* Hover- und  */
.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
  color: #28282E;
  /* same color as surroundig */
  text-decoration: underline;
  /* and also underline if link in focus */
}

